[package]
name = "tixyva"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = "0.19.14"
anyhow = "1.0.39"
crossterm = "0.19.0"
fastrand = "1.4.0"
cpal = "0.11.0" # Use a very old version here cause i know it used to work for Mega

[profile.dev]
opt-level = 3
